build: added tor repo as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "buildscripts/src/libevent"]
 	path = buildscripts/src/libevent
 	url = https://github.com/libevent/libevent
+[submodule "extern/tor"]
+	path = extern/tor
+	url = https://gitlab.com/torproject/tor.git
