--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ release
 *.o
 *.moc
 tests/*/tst_*
+src/tests/*/tst_*
 !tst_*.pro
 !tst_*.cpp
 !tst_*.h
@@ -23,6 +24,7 @@ tests/*/tst_*
 packaging/installer/Qt
 packaging/installer/Output
 translation/*.qm
+src/tego-ui/translation/*.qm
 config
 config.ricochet
 config.log
@@ -31,6 +33,7 @@ config.tests/*/*
 !config.tests/*/*.cpp
 !config.tests/*/*.h
 ricochet
+src/ricochet.log
 build-tests*
 buildscripts/src/ricochet-refresh
 buildscripts/output
