build: pulled down fmt to extern directory and moved logger into libtego, removed fmt copies from tego-ui

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "extern/tor"]
 	path = extern/tor
 	url = https://gitlab.com/torproject/tor.git
+[submodule "src/extern/fmt"]
+	path = src/extern/fmt
+	url = https://github.com/fmtlib/fmt.git
