build: moved tor submodule under src/extern and checked out maint-0.4.4 branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,9 @@
 [submodule "buildscripts/src/libevent"]
 	path = buildscripts/src/libevent
 	url = https://github.com/libevent/libevent
-[submodule "extern/tor"]
-	path = extern/tor
-	url = https://gitlab.com/torproject/tor.git
 [submodule "src/extern/fmt"]
 	path = src/extern/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "src/extern/tor"]
+	path = src/extern/tor
+	url = https://git.torproject.org/tor.git
