--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "src/extern/fmt"]
 	path = src/extern/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "src/extern/tor"]
+	path = src/extern/tor
+	url = https://git.torproject.org/tor.git
