libtego: File chunking progress 	FileChannel.cpp: 			- sendFile & sendFileWithId should (in theory) 			  chunk a given file to a folder in the same 			  directory as the file named "chunks" 			- Created functions that do nothing to avoid 			  the compiler treating FileChannel as an 			  abstract class 	FileChannel.h: 			- Function prototypes 			- typedefs 			- consts
	Useful.h:
			- CEIL_DIV macro to... well.. ceiling divide
	precomp.h:
			- Some stdlib headers
	ConversationModel.cpp:
			- When sending a message, if the text begins with
			  "file://", it will be treated as a file path,
			  and will, instead of treating it as a chat
			  message, send the file path to ConversationModel::sendFile
			  which will, for now, handle file transferring
			- For code density, a template `channelForContact`
			  is provided, which will find a channel for a given
			  contact, and create one if it does not already exist.
			  This is used in both sendMessage and sendFile.
			- Added type enum to message struct type to distinguish
			  between files and messages. This is to allow
			  sendQueuedMessages to properly handle each type.
	Channel.cpp:
			- Added FileChannel type for Channel::create
	.gitignore:
			- Added rule to not ignore .pb.h files in
			  src/libtego/include/protocol as these are symlinks

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ src/tests/*/tst_*
 !tst_*.cpp
 !tst_*.h
 *.pb.h
+!src/libtego/include/protocol/*.pb.h
 *.pb.cc
 packaging/installer/Qt
 packaging/installer/Output
